--- a/app/src/main/res/values/sql_check_loop.xml
+++ b/app/src/main/res/values/sql_check_loop.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sql_check_update_category_loop">
+    <string name="sql_check_update_category_loop" translatable="false">
         WITH RECURSIVE [category_path]([category_id_from], [category_id_to]) AS
         (
             SELECT [category_id_from], [category_id_to]
