--- a/app/src/main/res/values/sql_select_for_spinner.xml
+++ b/app/src/main/res/values/sql_select_for_spinner.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sql_get_currencies_for_spinner">
+    <string name="sql_get_currencies_for_spinner" translatable="false">
         SELECT
             [currency].[id] AS [id],
             [currency].[name] AS [text],
             [currency].[is_visible] AS [is_visible]
-        FROM [currency];
+        FROM [currency]
+        ORDER BY [currency].[name];
     </string>
-    <string name="sql_get_accounts_for_spinner">
+    <string name="sql_get_accounts_for_spinner" translatable="false">
         SELECT
             [account].[id] AS [id],
             [account].[name] AS [text],
             [account].[is_visible] AS [is_visible]
-        FROM [account];
+        FROM [account]
+        ORDER BY [account].[name];
     </string>
-    <string name="sql_get_categories_for_spinner">
+    <string name="sql_get_categories_for_spinner" translatable="false">
         WITH RECURSIVE [categories]([id], [name], [parent_id], [is_visible]) AS
         (
             SELECT
@@ -36,16 +38,18 @@
             [categories].[id] AS [id],
             [categories].[name] AS [text],
             [categories].[is_visible] AS [is_visible]
-        FROM [categories] WHERE [categories].[parent_id] IS NULL;
+        FROM [categories] WHERE [categories].[parent_id] IS NULL
+        ORDER BY [categories].[name];
     </string>
-    <string name="sql_get_account_groups_for_spinner">
+    <string name="sql_get_account_groups_for_spinner" translatable="false">
         SELECT
             [account_group].[id] AS [id],
             [account_group].[name] AS [text],
             [account_group].[is_visible] AS [is_visible]
-        FROM [account_group];
+        FROM [account_group]
+        ORDER BY [account_group].[name];
     </string>
-    <string name="sql_get_currencies_by_category_for_spinner">
+    <string name="sql_get_currencies_by_category_for_spinner" translatable="false">
         WITH RECURSIVE [category_ids_filter]([category_id]) AS
         (
             SELECT ?1 AS [category_id]
@@ -64,6 +68,7 @@
             FROM [transaction]
             INNER JOIN [account] ON [account].[id] = [transaction].[account_id]
             WHERE [transaction].[is_committed] = 1 AND [transaction].[category_id] IN [category_ids_filter] AND [transaction].[created_at_utc] > ?2 AND [transaction].[created_at_utc] <![CDATA[<]]> ?3
-        );
+        )
+        ORDER BY [currency].[name];
     </string>
 </resources>
