--- a/app/src/main/res/drawable/ic_menu_export_excel.xml
+++ b/app/src/main/res/drawable/ic_menu_export_excel.xml
@@ -6,11 +6,8 @@
     android:tint="@color/icon">
   <path
       android:fillColor="@color/icon"
-      android:pathData="M12,2l-5.5,9h11z"/>
+      android:pathData="M20,6v14H6v2h14c1.1,0 2,-0.9 2,-2V6H20z"/>
   <path
       android:fillColor="@color/icon"
-      android:pathData="M17.5,17.5m-4.5,0a4.5,4.5 0,1 1,9 0a4.5,4.5 0,1 1,-9 0"/>
-  <path
-      android:fillColor="@color/icon"
-      android:pathData="M3,13.5h8v8H3z"/>
+      android:pathData="M16,2H4C2.9,2 2,2.9 2,4v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4C18,2.9 17.1,2 16,2zM9,16H4v-5h5V16zM16,16h-5v-5h5V16zM16,9H4V4h12V9z"/>
 </vector>
