--- a/app/src/main/res/layout/transfer_item.xml
+++ b/app/src/main/res/layout/transfer_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/checkBoxTransferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/textViewSumTransferItem"
         app:layout_constraintStart_toEndOf="@+id/checkBoxTransferItem"
@@ -38,7 +38,7 @@
         android:id="@+id/textViewSumTransferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonTransferItem"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,10 +54,10 @@
 
     <Button
         android:id="@+id/buttonTransferItem"
-        android:layout_width="48dp"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:contentDescription="@string/edit_button_label"
         app:icon="@drawable/ic_action_edit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +70,7 @@
         android:layout_marginTop="16dp"
         android:background="@color/header"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewToTransferItem" />
 </androidx.constraintlayout.widget.ConstraintLayout>
