--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/checkBoxTransactionItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:hint="@string/no_product"
         app:layout_constraintEnd_toStartOf="@+id/buttonTransactionItem"
         app:layout_constraintStart_toStartOf="@+id/textViewSumTransactionItem"
         app:layout_constraintTop_toBottomOf="@+id/textViewSumTransactionItem" />
@@ -53,8 +54,11 @@
 
     <TextView
         android:id="@+id/textViewTimeTransactionItem"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="@+id/textViewSumTransactionItem"
         app:layout_constraintEnd_toStartOf="@+id/buttonTransactionItem"
         app:layout_constraintStart_toEndOf="@+id/textViewSumTransactionItem"
